Remove public/index.html. Add simple layout + CSS

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,26 @@
   <%= csrf_meta_tag %>
 </head>
 <body>
+<div id="container">
+	<div id="header">
+		<div id="header_user">
+		Sign In
+		</div>
+		<div id="header_logo">
+		Nickoo
+		</div>
+		
+	</div>
 
 <%= yield %>
 
+	<div id="footer">
+		<div id="footwrap">
+			<div id="footer_content">
+				Created by oogiyot
+			</div>
+		</div>
+	</div>
+</div>
 </body>
 </html>
